--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,28 +24,32 @@
             android:layout_height="0dp"
             tools:src="@mipmap/ic_launcher"
             android:id="@+id/celebrityImageView"
-            android:layout_weight="1"
+            android:layout_weight="5"
             android:contentDescription="Celebrity Image" />
 
         <Button
             tools:text="Button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/celebButton1" />
+            android:layout_height="0dp"
+            android:id="@+id/celebButton1"
+            android:layout_weight="1" />
         <Button
             tools:text="Button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/celebButton2" />
+            android:layout_height="0dp"
+            android:id="@+id/celebButton2"
+            android:layout_weight="1" />
         <Button
             tools:text="Button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/celebButton3" />
+            android:layout_height="0dp"
+            android:id="@+id/celebButton3"
+            android:layout_weight="1" />
         <Button
             tools:text="Button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/celebButton4" />
+            android:layout_height="0dp"
+            android:id="@+id/celebButton4"
+            android:layout_weight="1" />
     </LinearLayout>
 </RelativeLayout>
