--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,24 +32,28 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/celebButton1"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="answerClick" />
         <Button
             tools:text="Button"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/celebButton2"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="answerClick" />
         <Button
             tools:text="Button"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/celebButton3"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="answerClick" />
         <Button
             tools:text="Button"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/celebButton4"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="answerClick" />
     </LinearLayout>
 </RelativeLayout>
